# guiterm

./: .gitignore  README.md  config.jsonc  guiterm.jsonc  meson.build
.github/: dependencies
.github/workflows/: CI.yml
include/: arg_parser.hh  config.hh  log.hh  process.hh  sdl.hh  utils.hh
include/sdl/: types.hh  window.hh
src/: arg_parser.cc  config.cc  log.cc  main.cc  process.cc  sdl.cc  utils.cc
src/sdl/: window.cc
